# otus-task1

./: CMakeLists.txt  version.h.in
.github/workflows/: linux.yaml  release.yaml
scripts/: build-x86_64-linux.sh
src/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
tests/: CMakeLists.txt  test_hello.cpp
